# NX-DEV

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  conanfile.txt  main.cpp  nx-test1.sh
.github/workflows/: ci.yml
deploy/: deployment.yaml  service.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
